--- a/src/templates/screens/Error.vm
+++ b/src/templates/screens/Error.vm
@@ -2,7 +2,7 @@ $page.setTitle("Scarab Error")
 
 <h2>Scarab Error</h2>
 
-<SPAN class="PlainText">
+
 #if( $data.getMessage() )
     Message: $data.getMessage()
 #else
@@ -12,15 +12,14 @@ $page.setTitle("Scarab Error")
         $stackTrace
         </pre>
     #else
-        Sorry, there was no error message. :-( If there was one, it would have been shown 
+        <p>
+Sorry, there was no error message. :-( If there was one, it would have been shown 
         here. Please believe me! 
+</p>
+
         <p>
         Although, one common source of the error could be a result of not being able 
         to find the requested template. Please try going back to the <a 
-        href="$link.setPage("Start.vm")">Start</a> screen and starting over.
+        href="$link.setPage("Start.vm")">Start</a> screen and starting over.</p>
     #end
 #end
-</SPAN>
-<br>
-<br>
-
