--- a/src/templates/screens/MoveIssue2.vm
+++ b/src/templates/screens/MoveIssue2.vm
@@ -15,9 +15,9 @@ $page.setTitle("Copy / Move Issue")
 
        <table width="100%" border="1" cellspacing="2" cellpadding="3">
         <tr>
-         <th>Summary:</th>
-         <th>Date Committed:</th>
-         <th>Committed By:</th>
+         <th>Summary</th>
+         <th>Date Committed</th>
+         <th>Committed By</th>
         </tr>
         <tr class="a">
          <td>
@@ -146,7 +146,7 @@ $page.setTitle("Copy / Move Issue")
 #set ($tmp = "Copy")
 #end
 
-<input type="submit" value="Back" class="button" name="eventSubmit_doBacktoone"/> 
+<input type="submit" value="Back" name="eventSubmit_doBacktoone"/> 
 <input type="submit" value="$tmp Issue" name="eventSubmit_doSaveissue"/>
 </p>
         
