--- a/src/templates/screens/reports/Step2b.vm
+++ b/src/templates/screens/reports/Step2b.vm
@@ -5,7 +5,7 @@
 
 <h2>Define report (2.4.1)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
