--- a/src/templates/screens/SaveQuery.vm
+++ b/src/templates/screens/SaveQuery.vm
@@ -17,21 +17,21 @@
 <h3>Save Your Query</h3>
 
       <div class="axial">
-       <table width="100%" cellpadding="3" cellspacing="2" border="1">
+       <table cellpadding="3" cellspacing="2" border="0">
         <tr>
-         <th width="120">query name:</th>
+         <th width="120">query name</th>
 
          <td>#fieldErrorMsg($queryGroup.Name "")<input type="text" name="$queryGroup.Name.Key" size="25" value="$!queryGroup.Name" /></td>
         </tr>
 
         <tr>
-         <th width="120">query description:</th>
+         <th width="120">query description</th>
 
          <td><textarea name="$queryGroup.Description.Key" rows="4" cols="40">$!queryGroup.Description</textarea></td>
         </tr>
 
         <tr>
-         <th width="120">Availability:</th>
+         <th width="120">Availability</th>
 
          <td>#queryTypeSelectBox ($query)
          </td>
@@ -39,7 +39,7 @@
         </tr>
 
         <tr>
-         <th width="120">location:</th>
+         <th width="120">location</th>
          <td>current project '$module.Name'</td>
          <input type = "hidden" name="$queryGroup.ModuleId.Key" value = "$module.ModuleId">
         </tr>
