--- a/src/templates/screens/reports/Step3_1a.vm
+++ b/src/templates/screens/reports/Step3_1a.vm
@@ -6,7 +6,7 @@
 
 <h2>Define report (2.4.1)</h2>
 		
-		<div id="tabs">
+		<div class="tabs">
 			<table cellpadding="3" cellspacing="0" border="0">
 			<tr>
 			<td>1: <a href="#" title="summary info">Summary info</a></td>
@@ -27,7 +27,7 @@
 <form method="get" action="$action">
 		
 <div class="axial">
-	<table width="100%" cellpadding="3" cellspacing="2" border="1">			
+	<table cellpadding="3" cellspacing="2" border="0">			
 		<tr>
 			<th width="120">report date</th>
              <td>
